--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@graphql-tools/schema": "^9.0.12",
     "@typedorm/common": "1.16.0-beta.2",
     "@typedorm/core": "1.16.0-beta.2",
-    "@typedorm/document-client": "^1.16.0-beta.2",
+    "@typedorm/document-client": "1.16.0-beta.2",
     "async-retry": "^1.3.3",
     "axios": "^1.3.4",
     "dataloader": "^2.2.2",
